# homework_august

./: .coverage  .env.template  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_owner_alter_lesson_owner.py  0005_course_price.py  0006_course_last_notification_sent_course_updated_at.py
users/: admin.py  filters.py  models.py  serializers.py  stripe_checkout.py  stripe_gateway.py  tasks.py  urls.py  views.py
users/management/commands/: add_super_user.py  seed_groups.py  seed_payments.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_payment.py  0004_alter_customuser_managers_alter_payment_method.py  0005_payment_checkout_url_payment_status_and_more.py  0006_alter_payment_checkout_url.py
